src/test/ui/object-safety/object-safety-issue-22040.stderr
error[E0038]: the trait `Expr` cannot be made into an object
  --> $DIR/object-safety-issue-22040.rs:12:23
   |
LL | trait Expr: Debug + PartialEq {
   |       ----          --------- ...because it uses `Self` as a type parameter in this
   |       |
   |       this trait cannot be made into an object...
...
LL |     elements: Vec<Box<dyn Expr + 'x>>,
   |                       ^^^^^^^^^^^^^ the trait `Expr` cannot be made into an object

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
